--- a/workspace/padaria/src/interfaceGrafica/TelaLoginLayout.fxml
+++ b/workspace/padaria/src/interfaceGrafica/TelaLoginLayout.fxml
@@ -7,24 +7,21 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfaceGrafica.TelaLoginLayoutController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfaceGrafica.TelaLoginLayoutController">
    <children>
       <PasswordField fx:id="tfSenha" layoutX="233.0" layoutY="240.0" />
-      <Button fx:id="btnLogin" layoutX="314.0" layoutY="285.0" mnemonicParsing="false" onAction="#botaoLogin" prefHeight="21.0" prefWidth="53.0" text="Login">
-         <font>
-            <Font name="Arial" size="12.0" />
-         </font></Button>
+      <Button fx:id="btnLogin" layoutX="349.0" layoutY="279.0" mnemonicParsing="false" onAction="#botaoLogin" prefHeight="21.0" text="Login" />
       <Label layoutX="140.0" layoutY="201.0" text="Usuario">
          <font>
-            <Font name="Arial" size="18.0" />
+            <Font size="17.0" />
          </font>
       </Label>
       <Label layoutX="151.0" layoutY="241.0" text="Senha">
          <font>
-            <Font name="Arial" size="18.0" />
+            <Font size="17.0" />
          </font>
       </Label>
-      <Label layoutX="268.0" layoutY="93.0" text="Login">
+      <Label layoutX="271.0" layoutY="140.0" text="Login">
          <font>
             <Font name="Arial Black" size="21.0" />
          </font>
