--- a/workspace/padaria/src/interfaceGrafica/TelaMenuFuncionariosLayout.fxml
+++ b/workspace/padaria/src/interfaceGrafica/TelaMenuFuncionariosLayout.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
@@ -11,11 +12,12 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfaceGrafica.TelaMenuFuncionariosLayoutController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfaceGrafica.TelaMenuFuncionariosLayoutController">
    <children>
-      <MenuBar layoutY="2.0" prefHeight="24.0" prefWidth="720.0">
+      <MenuBar layoutY="-6.0" prefHeight="37.0" prefWidth="750.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
@@ -33,14 +35,17 @@
             </items>
           </Menu>
         </menus>
+         <padding>
+            <Insets top="5.0" />
+         </padding>
       </MenuBar>
-      <SplitPane dividerPositions="0.2691131498470948" layoutY="26.0" orientation="VERTICAL" prefHeight="329.0" prefWidth="216.0">
+      <SplitPane dividerPositions="0.2691131498470948" layoutY="31.0" orientation="VERTICAL" prefHeight="324.0" prefWidth="216.0">
         <items>
           <AnchorPane fx:id="sppTabelaBuscar" minHeight="0.0" minWidth="0.0" prefHeight="60.0" prefWidth="214.0">
                <children>
                   <TextField fx:id="tfBuscar" layoutX="4.0" layoutY="14.0" prefHeight="23.0" prefWidth="205.0" />
                   <Button fx:id="btnBuscar" layoutX="30.0" layoutY="43.0" mnemonicParsing="false" onAction="#buscarFuncionario" text="Buscar" />
-                  <Button fx:id="btnLimpar" layoutX="134.0" layoutY="43.0" mnemonicParsing="false" onAction="#limparCampoDeBusca" text="Limpar" />
+                  <Button fx:id="btnLimpar" layoutX="119.0" layoutY="43.0" mnemonicParsing="false" onAction="#limparCampoDeBusca" text="Limpar" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
@@ -58,23 +63,27 @@
       <TextField fx:id="tfNome" layoutX="285.0" layoutY="115.0" />
       <TextField fx:id="tfSenha" layoutX="285.0" layoutY="270.0" />
       <TextField fx:id="tfSalario" layoutX="285.0" layoutY="322.0" />
-      <TextField fx:id="tfEstado" layoutX="579.0" layoutY="322.0" />
-      <TextField fx:id="tfCidade" layoutX="579.0" layoutY="270.0" />
-      <TextField fx:id="tfNumero" layoutX="579.0" layoutY="217.0" />
+      <VBox layoutX="573.0" layoutY="115.0" prefHeight="245.0" prefWidth="171.0" spacing="26.0">
+         <children>
+            <TextField fx:id="tfLogradouro" />
+            <TextField fx:id="tfComplemento" />
+            <TextField fx:id="tfNumero" />
+            <TextField fx:id="tfCidade" />
+            <TextField fx:id="tfEstado" />
+         </children>
+      </VBox>
       <TextField fx:id="tfUsuario" layoutX="285.0" layoutY="217.0" />
-      <TextField fx:id="tfComplemento" layoutX="579.0" layoutY="168.0" />
-      <TextField fx:id="tfLogradouro" layoutX="579.0" layoutY="115.0" />
-      <ChoiceBox fx:id="cbCargo" layoutX="285.0" layoutY="168.0" prefHeight="23.0" prefWidth="134.0" />
+      <ChoiceBox fx:id="cbCargo" layoutX="285.0" layoutY="168.0" prefHeight="26.0" prefWidth="171.0" />
       <Label layoutX="233.0" layoutY="119.0" text="Nome" />
       <Label layoutX="233.0" layoutY="172.0" text="Cargo" />
       <Label layoutX="233.0" layoutY="221.0" text="Login" />
       <Label layoutX="233.0" layoutY="274.0" text="Senha" />
       <Label layoutX="233.0" layoutY="326.0" text="Salario" />
-      <Label layoutX="492.0" layoutY="119.0" text="Logradouro" />
-      <Label layoutX="494.0" layoutY="172.0" text="Complemento" />
-      <Label layoutX="492.0" layoutY="221.0" text="Numero" />
-      <Label layoutX="495.0" layoutY="274.0" text="Cidade" />
-      <Label layoutX="495.0" layoutY="326.0" text="Estado" />
+      <Label layoutX="472.0" layoutY="120.0" text="Logradouro" />
+      <Label layoutX="472.0" layoutY="172.0" text="Complemento" />
+      <Label layoutX="473.0" layoutY="221.0" text="Numero" />
+      <Label layoutX="476.0" layoutY="275.0" text="Cidade" />
+      <Label layoutX="473.0" layoutY="327.0" text="Estado" />
       <Label layoutX="406.0" layoutY="40.0" text="Funcionarios">
          <font>
             <Font name="Arial Black" size="21.0" />
