--- a/workspace/padaria/src/interfaceGrafica/TelaVendaFuncionarioLayout.fxml
+++ b/workspace/padaria/src/interfaceGrafica/TelaVendaFuncionarioLayout.fxml
@@ -114,8 +114,13 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <HBox alignment="BOTTOM_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="2">
+                        <HBox alignment="BOTTOM_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnSpan="2" GridPane.rowIndex="2">
                            <children>
+                              <Button fx:id="btnRemover" mnemonicParsing="false" onAction="#onActionRemover" text="Remover">
+                                 <HBox.margin>
+                                    <Insets right="115.0" />
+                                 </HBox.margin>
+                              </Button>
                               <Button fx:id="btnAdicionar" mnemonicParsing="false" onAction="#onActionAdicionar" text="Adicionar" />
                            </children>
                            <padding>
@@ -159,34 +164,15 @@
                               <Insets right="5.0" />
                            </GridPane.margin>
                         </TextField>
-                        <SplitPane dividerPositions="0.5" prefHeight="160.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowSpan="2">
-                          <items>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                                 <children>
-                                    <TableView fx:id="tblNomeVenda" maxWidth="145.0" minWidth="145.0" prefHeight="200.0" prefWidth="200.0">
-                                      <columns>
-                                        <TableColumn fx:id="colNomeVenda" prefWidth="75.0" text="Nome" />
-                                      </columns>
-                                       <columnResizePolicy>
-                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                       </columnResizePolicy>
-                                    </TableView>
-                                 </children>
-                              </AnchorPane>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                                 <children>
-                                    <TableView fx:id="tblQtdVenda" maxWidth="145.0" minWidth="145.0" prefHeight="200.0" prefWidth="200.0">
-                                      <columns>
-                                        <TableColumn fx:id="colQtdVenda" prefWidth="75.0" text="Qtd" />
-                                      </columns>
-                                       <columnResizePolicy>
-                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                       </columnResizePolicy>
-                                    </TableView>
-                                 </children>
-                              </AnchorPane>
-                          </items>
-                        </SplitPane>
+                        <TableView fx:id="tblVenda" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowSpan="2">
+                          <columns>
+                            <TableColumn fx:id="colNomeVenda" prefWidth="75.0" text="Nome" />
+                            <TableColumn fx:id="colQtdVenda" prefWidth="75.0" text="Qtd" />
+                          </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                        </TableView>
                      </children>
                   </GridPane>
                </children>
