--- a/workspace/padaria/src/interfaceGrafica/TelaMenuFuncionariosLayout.fxml
+++ b/workspace/padaria/src/interfaceGrafica/TelaMenuFuncionariosLayout.fxml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -15,31 +11,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfaceGrafica.TelaMenuFuncionariosLayoutController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfaceGrafica.TelaMenuFuncionariosLayoutController">
    <children>
-      <MenuBar layoutY="-6.0" prefHeight="37.0" prefWidth="750.0">
-        <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
-            </items>
-          </Menu>
-        </menus>
-         <padding>
-            <Insets top="5.0" />
-         </padding>
-      </MenuBar>
-      <SplitPane dividerPositions="0.2691131498470948" layoutY="31.0" orientation="VERTICAL" prefHeight="324.0" prefWidth="216.0">
+      <SplitPane dividerPositions="0.27639751552795033" orientation="VERTICAL" prefHeight="347.0" prefWidth="216.0">
         <items>
           <AnchorPane fx:id="sppTabelaBuscar" minHeight="0.0" minWidth="0.0" prefHeight="60.0" prefWidth="214.0">
                <children>
@@ -86,7 +60,7 @@
       <Label layoutX="473.0" layoutY="327.0" text="Estado" />
       <Label layoutX="406.0" layoutY="40.0" text="Funcionarios">
          <font>
-            <Font name="Arial Black" size="21.0" />
+            <Font name="System Bold" size="25.0" />
          </font>
       </Label>
       <Button fx:id="btnVoltar" layoutX="670.0" layoutY="363.0" mnemonicParsing="false" onAction="#botaoVoltar" text="Voltar" />
