--- a/workspace/padaria/src/interfaceGrafica/TelaMenuPrincipalGerenteLayout.fxml
+++ b/workspace/padaria/src/interfaceGrafica/TelaMenuPrincipalGerenteLayout.fxml
@@ -2,14 +2,11 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfaceGrafica.TelaMenuPrincipalGerenteLayoutController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfaceGrafica.TelaMenuPrincipalGerenteLayoutController">
    <children>
       <Button fx:id="btnSair" layoutX="515.0" layoutY="351.0" mnemonicParsing="false" onAction="#botaoSair" prefHeight="35.0" text="Logout">
          <font>
@@ -22,7 +19,7 @@
                   <Font size="15.0" />
                </font>
             </Button>
-            <Button fx:id="btnProdutos" mnemonicParsing="false" onAction="#abrirMenuProdutos" prefHeight="42.0" prefWidth="116.0" text="Produtos">
+            <Button fx:id="btnProdutos" mnemonicParsing="false" onAction="#abrirMenuProdutos" prefHeight="42.0" prefWidth="116.0" text="Estoque">
                <font>
                   <Font size="15.0" />
                </font>
@@ -39,20 +36,5 @@
             <Font name="System Bold" size="25.0" />
          </font>
       </Label>
-      <MenuBar layoutX="1.0" layoutY="2.0" prefHeight="24.0" prefWidth="600.0">
-        <menus>
-          <Menu mnemonicParsing="false" text="Padarex">
-            <items>
-              <MenuItem fx:id="mniLogout" mnemonicParsing="false" text="Sair de sessão" />
-                  <MenuItem fx:id="mniFechar" mnemonicParsing="false" onAction="#fecharPrograma" text="Fechar" />
-            </items>
-          </Menu>
-            <Menu mnemonicParsing="false" text="Ajuda">
-              <items>
-                <MenuItem fx:id="mniSobre" mnemonicParsing="false" text="Sobre" />
-              </items>
-            </Menu>
-        </menus>
-      </MenuBar>
    </children>
 </AnchorPane>
